Create register endpoint and db

--- a/static/index.html
+++ b/static/index.html
@@ -13,10 +13,9 @@
         <h2>Test</h2>
 
         <div id="messages"></div>
-        <input id="username" placeholder="Enter username" />
-
-        <input id="messageInput" placeholder="Type a message..." />
-        <button onclick="sendMessage()">Send</button>
+        <input id="username" placeholder="Username" />
+        <input id="password" placeholder="Password" />
+        <button onclick="register()">Auth</button>
     </div>
 </body>
 
