Create login endpoint

--- a/static/index.html
+++ b/static/index.html
@@ -13,9 +13,12 @@
         <h2>Test</h2>
 
         <div id="messages"></div>
-        <input id="username" placeholder="Username" />
-        <input id="password" placeholder="Password" />
-        <button onclick="register()">Auth</button>
+        <input id="reg-username" placeholder="Username" />
+        <input id="reg-password" placeholder="Password" />
+        <button onclick="register()">Register</button>
+        <input id="log-username" placeholder="Username" />
+        <input id="log-password" placeholder="Password" />
+        <button onclick="login()">Login</button>
     </div>
 </body>
 
