--- a/static/index.html
+++ b/static/index.html
@@ -19,6 +19,9 @@
         <input id="log-username" placeholder="Username" />
         <input id="log-password" placeholder="Password" />
         <button onclick="login()">Login</button>
+        <input type="number" id="ws-userid" placeholder="UserID" />
+        <input id="ws-message" placeholder="Message" />
+        <button onclick="sendMessage()">Send</button>
     </div>
 </body>
 
