Add logging and CreateGroup

--- a/static/index.html
+++ b/static/index.html
@@ -22,6 +22,9 @@
         <input id="ws-username" placeholder="Username" />
         <input id="ws-message" placeholder="Message" />
         <button onclick="sendMessage()">Send</button>
+        <input id="cr-groupname" placeholder="Groupname" />
+        <button onclick="createGroup()">Create</button>
+        <p id="test"></p>
     </div>
 </body>
 
