--- a/static/index.html
+++ b/static/index.html
@@ -24,6 +24,8 @@
         <button onclick="sendMessage()">Send</button>
         <input id="cr-groupname" placeholder="Groupname" />
         <button onclick="createGroup()">Create</button>
+        <input id="cr-grouptoken" placeholder="Grouptoken" />
+        <button onclick="joinGroup()">Join</button>
         <p id="test"></p>
     </div>
 </body>
